--- a/cilium/datadog_checks/cilium/data/conf.yaml.example
+++ b/cilium/datadog_checks/cilium/data/conf.yaml.example
@@ -2,14 +2,23 @@ init_config:
 
 instances:
 
-    ## @param prometheus_url - string - required
+    ## @param agent_endpoint - string - required
     ## The URL where your application metrics are exposed by Prometheus.
     ## By default, the Cilium integration collects `cilium-agent` metrics.
+    #
+  - agent_endpoint: http://localhost:9090/metrics
+
+    ## @param operator_endpoint - string - optional
     ## If you would like to collect the `cilium-operator` metrics, enable
-    ## the `collect_operator_metrics` option and update the url.
+    ## the `collect_operator_metrics` option.
     ## Cilium operator metrics are exposed on port 6942.
     #
-  - prometheus_url: http://localhost:9090/metrics
+    # operator_endpoint: http://localhost:6942/metrics
+
+    ## @param collect_operator_metrics - boolean - optional - default: false
+    ## Enable to collect `cilium-operator` metrics.
+    #
+    # collect_operator_metrics: false
 
     ## @param tags - list of key:value elements - optional
     ## List of tags to attach to every metrics, events and service checks emitted by this integration.
@@ -23,8 +32,3 @@ instances:
     ## Overrides the default timeout value in second
     #
     # prometheus_timeout: 10
-
-    ## @param collect_operator_metrics - boolean - optional - default: false
-    ## Enable to collect `cilium-operator` metrics.
-    #
-    # collect_operator_metrics: false
