--- a/datadog_checks_base/datadog_checks/base/data/agent_requirements.in
+++ b/datadog_checks_base/datadog_checks/base/data/agent_requirements.in
@@ -3,6 +3,7 @@ aerospike==3.6.0; sys_platform != 'win32'
 beautifulsoup4==4.5.1
 binary==1.0.0
 boto==2.46.1
+clickhouse-driver==0.1.2
 contextlib2==0.5.5
 cryptography==2.7
 cx-oracle==7.2.0
