--- a/cilium/datadog_checks/cilium/data/conf.yaml.example
+++ b/cilium/datadog_checks/cilium/data/conf.yaml.example
@@ -28,7 +28,7 @@ instances:
     #   - <KEY_1>:<VALUE_1>
     #   - <KEY_2>:<VALUE_2>
 
-    ## @param prometheus_timeout - integer - optional - default: 10
+    ## @param timeout - integer - optional - default: 10
     ## Overrides the default timeout value in second
     #
-    # prometheus_timeout: 10
+    # timeout: 10
