--- a/cilium/datadog_checks/cilium/data/auto_conf.yaml
+++ b/cilium/datadog_checks/cilium/data/auto_conf.yaml
@@ -1,5 +1,5 @@
 ad_identifiers:
-  - cilium
+  - cilium-agent
 
 init_config:
 
@@ -28,3 +28,9 @@ instances:
     ## Overrides the default timeout value in second
     #
     # timeout: 10
+      - configMap:
+          items:
+          - key: auto_conf.yaml
+            path: auto_conf.yaml
+          name: auto-conf
+        name: custom_conf
