--- a/kube_apiserver_metrics/datadog_checks/kube_apiserver_metrics/data/conf.yaml.example
+++ b/kube_apiserver_metrics/datadog_checks/kube_apiserver_metrics/data/conf.yaml.example
@@ -5,13 +5,8 @@ instances:
     ## @param prometheus_url - string - required
     ## The URL where your application metrics are exposed by Prometheus.
     #
-  - prometheus_url: localhost:443/metrics
+  - prometheus_url: https://localhost:443/metrics
     
-    ## @param scheme - string - optional
-    ## Used to specify the scheme to reach the APIServer endpoints. Default to https.
-    #
-    # scheme: "https"
-
     ## @param bearer_token_auth - string - optional
     ## Used if you are using RBACs and need the agent to authenticate
     ## against the APIServer to retrieve metrics. Default to true.
